# rpc-sync

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile.state  README.md  app  app.cpp  client  main.cpp  rpc_sync.proto  server  state.h  state.x  state_client.c  state_clnt.c  state_server.c  state_svc.c
